cmake_minimum_required(VERSION 3.19)
project(Competitive)

set(CMAKE_CXX_STANDARD 14)

# chapter 2: generation
#add_executable(Competitive bstr_gen.cpp)
#add_executable(Competitive subset.cpp)
#add_executable(Competitive permute.cpp)
#add_executable(Competitive chap_2_ex.cpp)

# chapter 3: backtracking
#add_executable(Competitive bstr_backtrack.cpp)
#add_executable(Competitve subset_backtrack.cpp)
#add_executable(Competitve arrange.cpp)
#add_executable(Competitve analyse.cpp)
#add_executable(Competitive queens.cpp)

# chapter 4: branch and bound
#add_executable(Competitive tourism.cpp)
add_executable(Competitve abc.cpp)